feat: add basic auth for payment update
